# targetDB

./: pyproject.toml  requirements.txt  setup.py
targetDB/: cns_mpo.py  drugg_errors.py  druggability_DB.py  druggability_report.py  predict_all_targets.py  target_descriptors.py  target_features.py
targetDB/examples/Machine_learning_model/: ML_targetDB_paper.ipynb
targetDB/protein_atlas_api/: proteinatlas.py
targetDB/utils/: BindingDB_data_to_targetDB_picklefiles.ipynb  PDBbind_to_Json.ipynb  TCRD_to_json_files.ipynb  Untitled.ipynb  config.py  db_connection.py  druggability_ml.py  gene2id.py  hgnc_to_druggability_db.ipynb  pdb_parser.py  pocket_finder.py  retryers.py  tabcompleter.py  targetDB_gui.py  targetDB_init.py  tcrd_picklegenerator.ipynb  test.ipynb  uniprot_parse.py
tests/: conftest.py  test_druggability_ml.py  test_druggability_report.py  test_get_single_features.py  test_run_predictions.py
