[project]
name = "targetdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "et-xmlfile>=2.0.0",
    "fonttools>=4.59.2",
    "idna>=3.10",
    "intermine>=1.13.0",
    "joblib>=1.5.2",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "six>=1.17.0",
    "threadpoolctl>=3.6.0",
    "tqdm>=4.67.1",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "xlsxwriter>=3.2.5",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
